Update index.html with new content and links

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
   <a href="resume.pdf" download class="resume-btn">Download Resume</a>
 
   <div class="socials">
-    <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">LinkedIn</a>
-    <a href="https://github.com/your-github" target="_blank">GitHub</a>
+    <a href="www.linkedin.com/in/kamalapuram-chaitanya-61aa1b31b" target="_blank">LinkedIn</a>
+    <a href="https://github.com/kchaitanya06" target="_blank">GitHub</a>
   </div>
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
+
