Modify contact section with updated information
Updated contact section with new email and LinkedIn links.

--- a/index.html
+++ b/index.html
@@ -80,12 +80,31 @@
 <div class="lightbox">
   <img>
 </div>
-
-<!-- ================= CONTACT ================= -->
+  
 <section id="contact" class="contact">
   <h2>Contact</h2>
-  <p>chaitanya@example.com</p>
+
+  <p class="email">
+    Email:
+    <a href="mailto:kpraneetha22@gmail.com">
+      kpraneetha22@gmail.com
+    </a>
+  </p>
+
+  <a href="resume.pdf" download class="resume-btn">
+    Download Resume
+  </a>
+
+  <div class="socials">
+    <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">
+      LinkedIn
+    </a>
+    <a href="https://github.com/your-github" target="_blank">
+      GitHub
+    </a>
+  </div>
 </section>
+
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
@@ -100,4 +119,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
