Change email address in contact section
Updated email address in the contact section.

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
   <p class="email">
     Email:
-    <a href="mailto:kpraneetha22@gmail.com">
-      kpraneetha22@gmail.com
+    <a href="mailto:kchaithanya0206@gmail.com">
+      kchaithanya0206@gmail.com
     </a>
   </p>
 
@@ -108,6 +108,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
