Fix HTML formatting and update resume link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </a>
   </p>
 
-  <a href="resume.pdf" download class="resume-btn">
+  <a href="KAMALAPURAM CHAITANYA.PDF" download class="resume-btn">
     Download Resume
   </a>
 
@@ -108,6 +108,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
