Refactor index.html for improved layout and content
Updated the HTML structure and added a profile image to the hero section. Enhanced the about section layout and improved the overall formatting.

--- a/index.html
+++ b/index.html
@@ -22,30 +22,43 @@
 
 <!-- ===== HERO ===== -->
 <section class="hero">
-  <h1>Kamalapuram Chaitanya</h1>
-  <p>Computer Science Undergraduate | Aspiring Software Engineer</p>
-  <a href="KAMALAPURAM CHAITANYA.pdf" class="btn" download>📄 View Resume</a>
+  <div class="hero-container">
+    <img src="images/profile.jpg" alt="Profile Photo" class="profile-img">
+
+    <h1>Kamalapuram Chaitanya</h1>
+    <p class="hero-role">
+      Computer Science Undergraduate | Aspiring Software Engineer
+    </p>
+
+    <a href="KAMALAPURAM CHAITANYA.pdf" class="btn" download>
+      📄 View Resume
+    </a>
+  </div>
 </section>
 
 <!-- ===== ABOUT ===== -->
-<section id="about" class="section">
-  <h2>About Me</h2>
+<section id="about" class="section about-section">
+  <div class="about-grid">
 
-  <div class="about-box">
-    <p>
-      I am a <strong>Computer Science undergraduate</strong> with strong skills in
-      <strong>Java, Python, React, and Flask</strong>.
-      I have hands-on experience in <strong>full-stack development</strong> and
-      <strong>chatbot creation</strong>, and I enjoy building clean, responsive web
-      applications. I am eager to learn continuously and contribute to innovative
-      software engineering projects as a fresher.
-    </p>
-
-    <div class="chips">
-      <span>🎓 B.Tech CSE (CGPA: 8.2)</span>
-      <span>📍 Kurnool, Andhra Pradesh</span>
-      <span>🗣 English, Telugu, Hindi</span>
+    <!-- Left -->
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>
+        I am a <strong>Computer Science undergraduate</strong> with strong skills in
+        <strong>Java, Python, React, and Flask</strong>. I have hands-on experience in
+        <strong>full-stack development</strong> and <strong>chatbot creation</strong>.
+        I enjoy building clean, responsive web applications and aim to contribute to
+        innovative software engineering projects as a fresher.
+      </p>
     </div>
+
+    <!-- Right -->
+    <div class="about-info">
+      <div class="info-card">🎓 B.Tech CSE<br><span>CGPA: 8.2</span></div>
+      <div class="info-card">📍 Kurnool<br><span>Andhra Pradesh</span></div>
+      <div class="info-card">🗣 Languages<br><span>English, Telugu, Hindi</span></div>
+    </div>
+
   </div>
 </section>
 
@@ -54,16 +67,16 @@
   <h2>Skills</h2>
 
   <div class="skills-grid">
-    <div class="skill">Java</div>
-    <div class="skill">Python</div>
-    <div class="skill">C</div>
-    <div class="skill">HTML</div>
-    <div class="skill">CSS</div>
-    <div class="skill">VS Code</div>
-    <div class="skill">DSA</div>
-    <div class="skill">OOPs</div>
-    <div class="skill">DBMS</div>
-    <div class="skill">Operating Systems</div>
+    <span class="skill">Java</span>
+    <span class="skill">Python</span>
+    <span class="skill">C</span>
+    <span class="skill">HTML</span>
+    <span class="skill">CSS</span>
+    <span class="skill">VS Code</span>
+    <span class="skill">DSA</span>
+    <span class="skill">OOPs</span>
+    <span class="skill">DBMS</span>
+    <span class="skill">Operating Systems</span>
   </div>
 </section>
 
@@ -75,35 +88,33 @@
     <div class="card">
       <h3>E-Commerce Portfolio Platform</h3>
       <p>
-        Built a responsive e-commerce application using <strong>React</strong> and
-        <strong>Node.js</strong> for dynamic product listings and improved user
-        experience.
+        Built a responsive e-commerce application using React and Node.js for
+        dynamic product listings and improved user experience.
       </p>
       <div class="tags">
-        <span>React</span><span>Node.js</span><span>HTML</span><span>CSS</span>
+        <span>React</span><span>Node.js</span>
       </div>
     </div>
 
     <div class="card">
       <h3>AI Chatbot with Flask</h3>
       <p>
-        Developed an AI chatbot using <strong>Flask</strong> and <strong>Python</strong>
-        with real-time interaction through <strong>AJAX</strong>. Implemented NLP logic
-        to handle user queries and designed the frontend using HTML and CSS.
+        Developed a chatbot using Flask and Python with real-time interaction
+        via AJAX and NLP-based logic.
       </p>
       <div class="tags">
-        <span>Python</span><span>Flask</span><span>AJAX</span>
+        <span>Python</span><span>Flask</span>
       </div>
     </div>
 
     <div class="card">
       <h3>Cybersecurity Workshop</h3>
       <p>
-        Led a campus cybersecurity workshop on phishing awareness and safe browsing
-        practices, successfully training <strong>100+ students</strong>.
+        Conducted a cybersecurity awareness workshop and trained 100+ students
+        on phishing and safe browsing practices.
       </p>
       <div class="tags">
-        <span>Cybersecurity</span><span>Awareness</span>
+        <span>Cybersecurity</span>
       </div>
     </div>
   </div>
@@ -118,12 +129,10 @@
       <h3>AWS Cloud Computing</h3>
       <p>Eduskills</p>
     </div>
-
     <div class="card">
       <h3>Microsoft Office Specialist (Word)</h3>
       <p>Microsoft</p>
     </div>
-
     <div class="card">
       <h3>Robotics Workshop</h3>
       <p>Arduino & Raspberry Pi</p>
@@ -149,4 +158,3 @@
 
 </body>
 </html>
-
