Fix HTML formatting and add target to resume link

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       Computer Science Undergraduate | Aspiring Software Engineer
     </p>
 
-    <a href="KAMALAPURAM CHAITANYA.pdf" class="btn" download>
-      📄 View Resume
-    </a>
+    <a href="KAMALAPURAM CHAITANYA.pdf" class="btn" target="_blank">
+  📄 View Resume
+</a>
   </div>
 </section>
 
@@ -158,3 +158,4 @@
 
 </body>
 </html>
+
